RESOLVED FIXED267300
[Books] Returning from Lock Screen shows a flash of missing content
https://bugs.webkit.org/show_bug.cgi?id=267300
Summary [Books] Returning from Lock Screen shows a flash of missing content
Matt Woodrow
Reported 2024-01-09 15:29:21 PST
Attachments
Matt Woodrow
Comment 1 2024-01-09 15:44:54 PST
EWS
Comment 2 2024-01-11 12:16:49 PST
Committed 272932@main (39ec746c46ce): <https://commits.webkit.org/272932@main> Reviewed commits have been landed. Closing PR #22555 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.