[Books] Returning from Lock Screen shows a flash of missing content https://bugs.webkit.org/show_bug.cgi?id=267300 <rdar://119957147>

Reviewed by Simon Fraser.

If we've included an ImageBufferSet with an empty dirty region in the prepare for display
set, then we always need to return a valid buffer handle.

This happens when we think the front buffer is volatile (as happens when the screen is locked),
and we want to confirm that the contents are still there. If they are, no drawing is needed,
but we still need to update the buffer handle.

* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
(WebKit::RemoteImageBufferSet::ensureBufferForDisplay):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.mm:
(WebKit::RemoteLayerBackingStoreCollection::prepareBackingStoresForDisplay):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithInProcessRenderingBackingStore.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStore::prepareToDisplay):

Canonical link: https://commits.webkit.org/272932@main