Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStore.h
@@ -38,6 +38,7 @@ public:
 
     bool isRemoteLayerWithRemoteRenderingBackingStore() const final { return true; }
 
+    void prepareToDisplay() final;
     void clearBackingStore() final;
     void createContextAndPaintContents() final;
 
